--- a/MetricsOnValidationSet_reply.ipynb
+++ b/MetricsOnValidationSet_reply.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "unable to import 'smart_open.gcs', disabling that module\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import s3fs\n",
@@ -55,6 +63,38 @@
     "print(prauc)\n",
     "print(rce)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Factorization Machine Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_features = [\"tweet_timestamp\", \"reply_timestamp\"]\n",
+    "train = pd.read_csv(open(\"s3://recsys-challenge-2020/training.tsv\"), encoding=\"utf-8\",\n",
+    "                    names = all_features, usecols= [8, 20], sep=\"\\x01\"\n",
+    "                   )\n",
+    "train_sorted = train.sort_values(by=['tweet_timestamp']).reset_index()\n",
+    "n_head = 90\n",
+    "n_tail = 10\n",
+    "train_set = train_sorted.head(int(len(train_sorted)*(n_head/100)))\n",
+    "val_set = train_sorted.tail(int(len(train_sorted)*(n_tail/100))).reset_index()\n",
+    "val_set['reply_bool'] = val_set.reply_timestamp.fillna(0)\n",
+    "val_set.loc[val_set.reply_bool != 0.0, 'reply_bool'] = 1.0\n",
+    "gt = list(val_set.reply_bool)\n",
+    "pr_df = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/data/val_set_result.csv',\\\n",
+    "                      names = ['probability_reply'])\n",
+    "pr = list(pr_df.probability_reply)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
   }
  ],
  "metadata": {
@@ -73,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
