--- a/classification_type_models/factorization_machines.ipynb
+++ b/classification_type_models/factorization_machines.ipynb
@@ -37,7 +37,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train['reply_bool'] = train.reply_timestamp.fillna(0)\n",
+    "train.loc[train.reply_bool != 0.0, 'reply_bool'] = 1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n",
+      "/home/ubuntu/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py:965: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self.obj[item] = s\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_set['reply_bool'] = train_set.reply_timestamp.fillna(0)\n",
+    "train_set.loc[train_set.reply_bool != 0.0, 'reply_bool'] = 1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_set['reply_bool'] = val_set.reply_timestamp.fillna(0)\n",
+    "val_set.loc[val_set.reply_bool != 0.0, 'reply_bool'] = 1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -61,93 +110,311 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>level_0</th>\n",
+       "      <th>index</th>\n",
        "      <th>Language</th>\n",
        "      <th>tweet_timestamp</th>\n",
        "      <th>enaged_with_user_id</th>\n",
        "      <th>engaging_user_id</th>\n",
        "      <th>engagee_follows_engager</th>\n",
        "      <th>reply_timestamp</th>\n",
+       "      <th>reply_bool</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>22C448FF81263D4BAF2A176145EE9EAD</td>\n",
-       "      <td>1581258144</td>\n",
-       "      <td>D7EFC6D19CFB09B9A1CE4C4B0E0091F6</td>\n",
-       "      <td>0000006C3074607050F1339DDCB890BB</td>\n",
+       "      <td>133267715</td>\n",
+       "      <td>11908278</td>\n",
+       "      <td>125C57F4FA6D4E110983FB11B52EFD4E</td>\n",
+       "      <td>1581486678</td>\n",
+       "      <td>D75AAE3CCFA44BD84C35942CA4D03E56</td>\n",
+       "      <td>A4B1828B571271073C68DA93D1465484</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>B9175601E87101A984A50F8A62A1C374</td>\n",
-       "      <td>1581018910</td>\n",
-       "      <td>1F30A85E612A24B426013978ADB7AE46</td>\n",
-       "      <td>000005C520010F8917EEAB6F5B6EC1C4</td>\n",
-       "      <td>True</td>\n",
+       "      <td>133267716</td>\n",
+       "      <td>54640167</td>\n",
+       "      <td>125C57F4FA6D4E110983FB11B52EFD4E</td>\n",
+       "      <td>1581486678</td>\n",
+       "      <td>C7677DF4D001A22F3B969B2ABAB1C179</td>\n",
+       "      <td>F3A4C8EB81ADF3685E8F693037808A2C</td>\n",
+       "      <td>False</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>22C448FF81263D4BAF2A176145EE9EAD</td>\n",
-       "      <td>1581244866</td>\n",
-       "      <td>9E1FD934C376903895DEEBCC0F6AB920</td>\n",
-       "      <td>000006829BEADA9EEA695CF0C334B426</td>\n",
-       "      <td>False</td>\n",
+       "      <td>133267717</td>\n",
+       "      <td>102671906</td>\n",
+       "      <td>D3164C7FBCF2565DDF915B1B3AEFB1DC</td>\n",
+       "      <td>1581486678</td>\n",
+       "      <td>46AA727F36DE4EC3CAD7AC2C312421C3</td>\n",
+       "      <td>8BD011AB59AC04491687749245009C60</td>\n",
+       "      <td>True</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>22C448FF81263D4BAF2A176145EE9EAD</td>\n",
-       "      <td>1581250124</td>\n",
-       "      <td>BEB3C337B266E2C4769065AD64724329</td>\n",
-       "      <td>000006829BEADA9EEA695CF0C334B426</td>\n",
-       "      <td>False</td>\n",
+       "      <td>133267718</td>\n",
+       "      <td>54937609</td>\n",
+       "      <td>975B38F44D65EE42A547283787FF5A21</td>\n",
+       "      <td>1581486678</td>\n",
+       "      <td>258600B339EB2CBB1006073A145B9CFC</td>\n",
+       "      <td>F7BFBA56274FCBBBB76BDD36D0D6495B</td>\n",
+       "      <td>True</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>22C448FF81263D4BAF2A176145EE9EAD</td>\n",
-       "      <td>1580958805</td>\n",
-       "      <td>9E1FD934C376903895DEEBCC0F6AB920</td>\n",
-       "      <td>000006829BEADA9EEA695CF0C334B426</td>\n",
+       "      <td>133267719</td>\n",
+       "      <td>38246969</td>\n",
+       "      <td>125C57F4FA6D4E110983FB11B52EFD4E</td>\n",
+       "      <td>1581486678</td>\n",
+       "      <td>3CE0AF4B64BC1FA67EFA4E98B38CDF08</td>\n",
+       "      <td>10F6E035959B9AC156CED11E0FAED566</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14807518</th>\n",
+       "      <td>148075233</td>\n",
+       "      <td>11678309</td>\n",
+       "      <td>22C448FF81263D4BAF2A176145EE9EAD</td>\n",
+       "      <td>1581551999</td>\n",
+       "      <td>63A88B9A7264F35CBFE2C9DFFB428F36</td>\n",
+       "      <td>A18266F8C443499B212E666BD19536B7</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14807519</th>\n",
+       "      <td>148075234</td>\n",
+       "      <td>38584247</td>\n",
+       "      <td>ECED8A16BE2A5E8871FD55F4842F16B1</td>\n",
+       "      <td>1581551999</td>\n",
+       "      <td>BCDC7E16708AC5B155BA52460DFF687F</td>\n",
+       "      <td>159C36A1D94F654C5BC48F40D0D76AF9</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14807520</th>\n",
+       "      <td>148075235</td>\n",
+       "      <td>55912866</td>\n",
+       "      <td>22C448FF81263D4BAF2A176145EE9EAD</td>\n",
+       "      <td>1581551999</td>\n",
+       "      <td>63A88B9A7264F35CBFE2C9DFFB428F36</td>\n",
+       "      <td>053D77B11E4B8D6A514715BDA396295D</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14807521</th>\n",
+       "      <td>148075236</td>\n",
+       "      <td>124669351</td>\n",
+       "      <td>22C448FF81263D4BAF2A176145EE9EAD</td>\n",
+       "      <td>1581551999</td>\n",
+       "      <td>63A88B9A7264F35CBFE2C9DFFB428F36</td>\n",
+       "      <td>BC210F06D8397A7C4CD396152136F10C</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14807522</th>\n",
+       "      <td>148075237</td>\n",
+       "      <td>97189266</td>\n",
+       "      <td>ECED8A16BE2A5E8871FD55F4842F16B1</td>\n",
+       "      <td>1581551999</td>\n",
+       "      <td>BCDC7E16708AC5B155BA52460DFF687F</td>\n",
+       "      <td>3FFE79977CB6DF95E310B5FDCAA96B53</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>14807523 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                           Language  tweet_timestamp  \\\n",
-       "0  22C448FF81263D4BAF2A176145EE9EAD       1581258144   \n",
-       "1  B9175601E87101A984A50F8A62A1C374       1581018910   \n",
-       "2  22C448FF81263D4BAF2A176145EE9EAD       1581244866   \n",
-       "3  22C448FF81263D4BAF2A176145EE9EAD       1581250124   \n",
-       "4  22C448FF81263D4BAF2A176145EE9EAD       1580958805   \n",
+       "            level_0      index                          Language  \\\n",
+       "0         133267715   11908278  125C57F4FA6D4E110983FB11B52EFD4E   \n",
+       "1         133267716   54640167  125C57F4FA6D4E110983FB11B52EFD4E   \n",
+       "2         133267717  102671906  D3164C7FBCF2565DDF915B1B3AEFB1DC   \n",
+       "3         133267718   54937609  975B38F44D65EE42A547283787FF5A21   \n",
+       "4         133267719   38246969  125C57F4FA6D4E110983FB11B52EFD4E   \n",
+       "...             ...        ...                               ...   \n",
+       "14807518  148075233   11678309  22C448FF81263D4BAF2A176145EE9EAD   \n",
+       "14807519  148075234   38584247  ECED8A16BE2A5E8871FD55F4842F16B1   \n",
+       "14807520  148075235   55912866  22C448FF81263D4BAF2A176145EE9EAD   \n",
+       "14807521  148075236  124669351  22C448FF81263D4BAF2A176145EE9EAD   \n",
+       "14807522  148075237   97189266  ECED8A16BE2A5E8871FD55F4842F16B1   \n",
        "\n",
-       "                enaged_with_user_id                  engaging_user_id  \\\n",
-       "0  D7EFC6D19CFB09B9A1CE4C4B0E0091F6  0000006C3074607050F1339DDCB890BB   \n",
-       "1  1F30A85E612A24B426013978ADB7AE46  000005C520010F8917EEAB6F5B6EC1C4   \n",
-       "2  9E1FD934C376903895DEEBCC0F6AB920  000006829BEADA9EEA695CF0C334B426   \n",
-       "3  BEB3C337B266E2C4769065AD64724329  000006829BEADA9EEA695CF0C334B426   \n",
-       "4  9E1FD934C376903895DEEBCC0F6AB920  000006829BEADA9EEA695CF0C334B426   \n",
+       "          tweet_timestamp               enaged_with_user_id  \\\n",
+       "0              1581486678  D75AAE3CCFA44BD84C35942CA4D03E56   \n",
+       "1              1581486678  C7677DF4D001A22F3B969B2ABAB1C179   \n",
+       "2              1581486678  46AA727F36DE4EC3CAD7AC2C312421C3   \n",
+       "3              1581486678  258600B339EB2CBB1006073A145B9CFC   \n",
+       "4              1581486678  3CE0AF4B64BC1FA67EFA4E98B38CDF08   \n",
+       "...                   ...                               ...   \n",
+       "14807518       1581551999  63A88B9A7264F35CBFE2C9DFFB428F36   \n",
+       "14807519       1581551999  BCDC7E16708AC5B155BA52460DFF687F   \n",
+       "14807520       1581551999  63A88B9A7264F35CBFE2C9DFFB428F36   \n",
+       "14807521       1581551999  63A88B9A7264F35CBFE2C9DFFB428F36   \n",
+       "14807522       1581551999  BCDC7E16708AC5B155BA52460DFF687F   \n",
        "\n",
-       "   engagee_follows_engager  reply_timestamp  \n",
-       "0                    False              NaN  \n",
-       "1                     True              NaN  \n",
-       "2                    False              NaN  \n",
-       "3                    False              NaN  \n",
-       "4                    False              NaN  "
+       "                          engaging_user_id  engagee_follows_engager  \\\n",
+       "0         A4B1828B571271073C68DA93D1465484                    False   \n",
+       "1         F3A4C8EB81ADF3685E8F693037808A2C                    False   \n",
+       "2         8BD011AB59AC04491687749245009C60                     True   \n",
+       "3         F7BFBA56274FCBBBB76BDD36D0D6495B                     True   \n",
+       "4         10F6E035959B9AC156CED11E0FAED566                    False   \n",
+       "...                                    ...                      ...   \n",
+       "14807518  A18266F8C443499B212E666BD19536B7                    False   \n",
+       "14807519  159C36A1D94F654C5BC48F40D0D76AF9                    False   \n",
+       "14807520  053D77B11E4B8D6A514715BDA396295D                    False   \n",
+       "14807521  BC210F06D8397A7C4CD396152136F10C                    False   \n",
+       "14807522  3FFE79977CB6DF95E310B5FDCAA96B53                    False   \n",
+       "\n",
+       "          reply_timestamp  reply_bool  \n",
+       "0                     NaN         0.0  \n",
+       "1                     NaN         0.0  \n",
+       "2                     NaN         0.0  \n",
+       "3                     NaN         0.0  \n",
+       "4                     NaN         0.0  \n",
+       "...                   ...         ...  \n",
+       "14807518              NaN         0.0  \n",
+       "14807519              NaN         0.0  \n",
+       "14807520              NaN         0.0  \n",
+       "14807521              NaN         0.0  \n",
+       "14807522              NaN         0.0  \n",
+       "\n",
+       "[14807523 rows x 9 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "val_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train[['Language', 'enaged_with_user_id', 'engaging_user_id', 'engagee_follows_engager', 'reply_bool']].to_csv('data/train.csv', index = False, sep = '\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_set[['Language', 'enaged_with_user_id', 'engaging_user_id', 'engagee_follows_engager', 'reply_bool']].to_csv('data/train_set.csv', index = False, sep = '\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_set[['Language', 'enaged_with_user_id', 'engaging_user_id', 'engagee_follows_engager', 'reply_bool']].to_csv('data/val_set.csv', index = False, sep = '\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_features = [\"Language\", \"tweet_timestamp\", \"enaged_with_user_id\", \"engaging_user_id\", \"engagee_follows_engager\",\\\n",
+    "                \"reply_timestamp\"]\n",
+    "\n",
+    "test = pd.read_csv(\"s3://recsys-challenge-2020/val.tsv\", encoding=\"utf-8\",\n",
+    "                    names = all_features, usecols= [7, 8, 9, 14, 19, 20], sep=\"\\x01\")\n",
+    "test['reply_bool'] = test.reply_timestamp.fillna(0)\n",
+    "test.loc[test.reply_bool != 0.0, 'reply_bool'] = 1.0\n",
+    "test[['Language', 'enaged_with_user_id', 'engaging_user_id', 'engagee_follows_engager', 'reply_bool']].to_csv('data/test.csv', index = False, sep = '\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = (test.reply_bool == 0.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15127684"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(test[mask])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15127684"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(test)"
+   ]
   }
  ],
  "metadata": {
