--- a/classification_type_models/fm_like.ipynb
+++ b/classification_type_models/fm_like.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,98 @@
     "n_tail = 10\n",
     "train_set = train_sorted.head(int(len(train_sorted)*(n_head/100)))\n",
     "val_set = train_sorted.tail(int(len(train_sorted)*(n_tail/100))).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train['like_bool'] = train.like_timestamp.fillna(0)\n",
+    "train.loc[train.like_bool != 0.0, 'like_bool'] = 1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train[['Language', 'enaged_with_user_id', 'engaging_user_id', 'engagee_follows_engager', 'like_bool']].to_csv('data/like/train.csv', index = False, sep = '\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n",
+      "/home/ubuntu/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py:965: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self.obj[item] = s\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_set['like_bool'] = train_set.like_timestamp.fillna(0)\n",
+    "train_set.loc[train_set.like_bool != 0.0, 'like_bool'] = 1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_set[['Language', 'enaged_with_user_id', 'engaging_user_id', 'engagee_follows_engager', 'like_bool']].to_csv('data/like/train_set.csv', index = False, sep = '\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_set['like_bool'] = val_set.like_timestamp.fillna(0)\n",
+    "val_set.loc[val_set.like_bool != 0.0, 'like_bool'] = 1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_set[['Language', 'enaged_with_user_id', 'engaging_user_id', 'engagee_follows_engager', 'like_bool']].to_csv('data/like/val_set.csv', index = False, sep = '\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_features = [\"Language\", \"tweet_timestamp\", \"enaged_with_user_id\", \"engaging_user_id\", \"engagee_follows_engager\",\\\n",
+    "                \"like_timestamp\"]\n",
+    "\n",
+    "test = pd.read_csv(\"s3://recsys-challenge-2020/val.tsv\", encoding=\"utf-8\",\n",
+    "                    names = all_features, usecols= [7, 8, 9, 14, 19, 23], sep=\"\\x01\")\n",
+    "test['like_bool'] = test.like_timestamp.fillna(0)\n",
+    "test.loc[test.like_bool != 0.0, 'like_bool'] = 1.0\n",
+    "test[['Language', 'enaged_with_user_id', 'engaging_user_id', 'engagee_follows_engager', 'like_bool']].to_csv('data/like/test.csv', index = False, sep = '\\t')"
    ]
   }
  ],
