--- a/base_file.ipynb
+++ b/base_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,15 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "all_features = ['tweet_id', 'enaging_user_id']\n",
-    "test = pd.read_csv(\"s3://recsys-challenge-2020/val.tsv\", encoding=\"utf-8\",\n",
+    "test = pd.read_csv(\"s3://recsys-challenge-2020/val_latest.tsv\", encoding=\"utf-8\",\n",
     "                    names = all_features, usecols= [2, 14], sep=\"\\x01\"\n",
     "                   )\n",
-    "test.to_csv('data/basefile.csv', header = None, index = False)"
+    "test[['tweet_id', 'enaging_user_id']].drop_duplicates().to_csv('data/basefile.csv', header = None, index = False)"
    ]
   }
  ],
