--- a/classification_type_models/fm_retweet.ipynb
+++ b/classification_type_models/fm_retweet.ipynb
@@ -34,6 +34,83 @@
     "train_set = train_sorted.head(int(len(train_sorted)*(n_head/100)))\n",
     "val_set = train_sorted.tail(int(len(train_sorted)*(n_tail/100))).reset_index()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train['retweet_bool'] = train.retweet_timestamp.fillna(0)\n",
+    "train.loc[train.retweet_bool != 0.0, 'retweet_bool'] = 1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train[['Language', 'enaged_with_user_id', 'engaging_user_id', 'engagee_follows_engager', 'like_bool']]\n",
+    ".to_csv('data/retweet/train.csv', index = False, sep = '\\t', header = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_set['retweet_bool'] = train_set.retweet_timestamp.fillna(0)\n",
+    "train_set.loc[train_set.retweet_bool != 0.0, 'retweet_bool'] = 1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_set[['Language', 'enaged_with_user_id', 'engaging_user_id', 'engagee_follows_engager', 'retweet_bool']]\n",
+    ".to_csv('data/retweet/train_set.csv', index = False, sep = '\\t', header = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_set['retweet_bool'] = val_set.retweet_timestamp.fillna(0)\n",
+    "val_set.loc[val_set.retweet_bool != 0.0, 'retweet_bool'] = 1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_set[['Language', 'enaged_with_user_id', 'engaging_user_id', 'engagee_follows_engager', 'retweet_bool']]\n",
+    ".to_csv('data/retweet/val_set.csv', index = False, sep = '\\t', header = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_features = [\"Language\", \"tweet_timestamp\", \"enaged_with_user_id\", \"engaging_user_id\", \"engagee_follows_engager\",\\\n",
+    "                \"retweet_timestamp\"]\n",
+    "\n",
+    "test = pd.read_csv(\"s3://recsys-challenge-2020/val.tsv\", encoding=\"utf-8\",\n",
+    "                    names = all_features, usecols= [7, 8, 9, 14, 19, 21], sep=\"\\x01\")\n",
+    "test['retweet_bool'] = test.retweet_timestamp.fillna(0)\n",
+    "test.loc[test.retweet_bool != 0.0, 'retweet_bool'] = 1.0\n",
+    "test[['Language', 'enaged_with_user_id', 'engaging_user_id', 'engagee_follows_engager', 'retweet_bool']]\n",
+    ".to_csv('data/retweet/test.csv', index = False, sep = '\\t', header = False)"
+   ]
   }
  ],
  "metadata": {
@@ -52,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
