--- a/classification_type_models/fm_retweet.ipynb
+++ b/classification_type_models/fm_retweet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,19 +47,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train[['Language', 'enaged_with_user_id', 'engaging_user_id', 'engagee_follows_engager', 'like_bool']]\n",
+    "train[['Language', 'enaged_with_user_id', 'engaging_user_id', 'engagee_follows_engager', 'retweet_bool']]\\\n",
     ".to_csv('data/retweet/train.csv', index = False, sep = '\\t', header = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n",
+      "/home/ubuntu/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py:965: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self.obj[item] = s\n"
+     ]
+    }
+   ],
    "source": [
     "train_set['retweet_bool'] = train_set.retweet_timestamp.fillna(0)\n",
     "train_set.loc[train_set.retweet_bool != 0.0, 'retweet_bool'] = 1.0"
@@ -67,17 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_set[['Language', 'enaged_with_user_id', 'engaging_user_id', 'engagee_follows_engager', 'retweet_bool']]\n",
+    "train_set[['Language', 'enaged_with_user_id', 'engaging_user_id', 'engagee_follows_engager', 'retweet_bool']]\\\n",
     ".to_csv('data/retweet/train_set.csv', index = False, sep = '\\t', header = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,17 +106,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "val_set[['Language', 'enaged_with_user_id', 'engaging_user_id', 'engagee_follows_engager', 'retweet_bool']]\n",
+    "val_set[['Language', 'enaged_with_user_id', 'engaging_user_id', 'engagee_follows_engager', 'retweet_bool']]\\\n",
     ".to_csv('data/retweet/val_set.csv', index = False, sep = '\\t', header = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +127,7 @@
     "                    names = all_features, usecols= [7, 8, 9, 14, 19, 21], sep=\"\\x01\")\n",
     "test['retweet_bool'] = test.retweet_timestamp.fillna(0)\n",
     "test.loc[test.retweet_bool != 0.0, 'retweet_bool'] = 1.0\n",
-    "test[['Language', 'enaged_with_user_id', 'engaging_user_id', 'engagee_follows_engager', 'retweet_bool']]\n",
+    "test[['Language', 'enaged_with_user_id', 'engaging_user_id', 'engagee_follows_engager', 'retweet_bool']]\\\n",
     ".to_csv('data/retweet/test.csv', index = False, sep = '\\t', header = False)"
    ]
   }
@@ -129,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
