try libsvm formats

--- a/base_file.ipynb
+++ b/base_file.ipynb
@@ -21,10 +21,10 @@
    "outputs": [],
    "source": [
     "all_features = ['tweet_id', 'enaging_user_id']\n",
-    "test = pd.read_csv(\"s3://recsys-challenge-2020/val_latest.tsv\", encoding=\"utf-8\",\n",
+    "test = pd.read_csv(\"s3://recsys-challenge-2020/val_26_04_2020.tsv\", encoding=\"utf-8\",\n",
     "                    names = all_features, usecols= [2, 14], sep=\"\\x01\"\n",
     "                   )\n",
-    "test[['tweet_id', 'enaging_user_id']].drop_duplicates().to_csv('data/basefile.csv', header = None, index = False)"
+    "test[['tweet_id', 'enaging_user_id']].drop_duplicates().to_csv('data/basefile_26_04_2020.csv', header = None, index = False)"
    ]
   }
  ],
