--- a/classification_type_models/create_libsvm_input_server.ipynb
+++ b/classification_type_models/create_libsvm_input_server.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import time"
    ]
   },
   {
@@ -57,13 +58,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def construct_line(row, columns, dtypes, string_dict, categorical_index, f_train_set, df_index):\n",
-    "    if df_index % 10000 == 0:\n",
-    "        print(df_index)\n",
+    "def construct_line(row, columns, dtypes, string_dict, file_obj, index, time1):\n",
+    "    \n",
+    "    if index % 100000 == 0:\n",
+    "        print(str(time.time() - time1) +\": \"+ str(index))\n",
+    "        \n",
+    "    global categorical_index\n",
     "    numerical_index = 0\n",
     "    new_line = str(row[-1])+ \" \"\n",
     "    for i in range(len(columns) - 1):\n",
@@ -74,23 +78,23 @@
     "        if ((dtype_at_i == object) or (dtype_at_i == bool)): # Categorical Features\n",
     "            if (dtype_at_i == bool):\n",
     "                value_at_i =  bool_to_str(value_at_i)\n",
-    "                \n",
-    "            values = string_dict[column_name_at_i]\n",
     "            \n",
-    "            if value_at_i in [x[0] for x in values]:\n",
-    "                index = [x[0] for x in values].index(value_at_i)\n",
-    "                indexed_value = values[index][1]\n",
+    "            value_to_be_found = column_name_at_i +\"_\"+ value_at_i\n",
+    "            \n",
+    "            if value_to_be_found in string_dict:\n",
+    "                indexed_value = string_dict[value_to_be_found]\n",
     "                new_line = new_line + str(indexed_value)+\":1 \"\n",
+    "            \n",
     "            else:\n",
-    "                indexed_value = sum(len(v) for v in string_dict.values()) + categorical_index\n",
+    "                indexed_value = categorical_index\n",
+    "                categorical_index = categorical_index + 1\n",
     "                new_line = new_line + str(indexed_value)+\":1 \"\n",
-    "                values.append((value_at_i, indexed_value))\n",
-    "                string_dict[column_name_at_i] = values\n",
+    "                string_dict[value_to_be_found] = indexed_value\n",
+    "                \n",
     "        else: # Numerical Features\n",
     "            new_line = new_line + str(numerical_index) + \":\" +str(value_at_i)+\" \"\n",
     "            numerical_index = numerical_index + 1\n",
-    "#     print(new_line)\n",
-    "    f_train_set.write(new_line+\"\\n\")"
+    "    file_obj.write(new_line+\"\\n\")"
    ]
   },
   {
@@ -103,29 +107,35 @@
      "output_type": "stream",
      "text": [
       "133267714\n",
-      "0\n",
-      "10000\n",
-      "20000\n",
-      "30000\n",
-      "40000\n",
-      "50000\n",
-      "60000\n",
-      "70000\n"
+      "194.92168736457825: 0\n",
+      "240.62178492546082: 100000\n",
+      "278.60088992118835: 200000\n",
+      "316.7180013656616: 300000\n",
+      "354.7650902271271: 400000\n",
+      "392.8153467178345: 500000\n",
+      "430.9726002216339: 600000\n",
+      "469.00185680389404: 700000\n",
+      "507.0381500720978: 800000\n",
+      "545.0631284713745: 900000\n",
+      "583.1796984672546: 1000000\n",
+      "621.4872136116028: 1100000\n"
      ]
     }
    ],
    "source": [
     "cnames_numerical = list(train_set.select_dtypes(exclude=['object', 'bool']).columns)\n",
-    "categorical_index = len(cnames_numerical) # Categorical indices start from here.\n",
-    "cnames_categorical = list(train_set.select_dtypes(include=['object', 'bool']).columns)\n",
-    "string_dict = {k: [] for k in cnames_categorical}\n",
+    "categorical_index = len(cnames_numerical) - 1 # Categorical indices start from here.\n",
+    "string_dict = {}\n",
     "f_train_set = open(\"f1/like/train_set.csv\", 'a')\n",
     "print(len(train_set))\n",
-    "train_set.apply(lambda x : construct_line(x, train_set.columns, train_set.dtypes, string_dict, categorical_index, f_train_set, x.name), axis = 1)\n",
+    "time1 = time.time()\n",
+    "train_set.apply(lambda x : construct_line(x, train_set.columns, train_set.dtypes, string_dict, f_train_set, x.name,\\\n",
+    "                                         time1), axis = 1)\n",
     "f_train_set.close()\n",
     "print(len(val_set))\n",
     "f_val_set = open(\"f1/like/val_set.csv\", 'a')\n",
-    "val_set.apply(lambda x : construct_line(x, val_set.columns, val_set.dtypes, string_dict, categorical_index, f_val_set, x.name), axis = 1)\n",
+    "val_set.apply(lambda x : construct_line(x, val_set.columns, val_set.dtypes, string_dict, f_val_set, x.name,\\\n",
+    "                                       time1), axis = 1)\n",
     "f_val_set.close()"
    ]
   },
