--- a/classification_type_models/create_libsvm_input.ipynb
+++ b/classification_type_models/create_libsvm_input.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "train = pd.read_csv(\"s3://recsys-challenge-2020/training.tsv\", encoding=\"utf-8\",\n",
     "                    names = all_features, usecols= [6, 7, 8, 9, 10, 11, 12, 14, 15, 16, 17, 19, 23], sep=\"\\x01\",\\\n",
-    "                    nrows = 10000)\n",
+    "                    nrows = 100)\n",
     "train['like_bool'] = train.like_timestamp.fillna(0)\n",
     "train.loc[train.like_bool != 0.0, 'like_bool'] = 1.0\n",
     "train_sorted = train.sort_values(by=['tweet_timestamp']).reset_index()\n",
@@ -100,7 +100,7 @@
     "        else: # Numerical Features\n",
     "            new_line = new_line + str(numerical_index) + \":\" +str(value_at_i)+\" \"\n",
     "            numerical_index = numerical_index + 1\n",
-    "#     print(new_line)\n",
+    "    print(new_line)\n",
     "    f_train_set.write(new_line+\"\\n\")"
    ]
   },
@@ -128,6 +128,7 @@
     "train_set.apply(lambda x : construct_line(x, train_set.columns, train_set.dtypes, string_dict, f_train_set), axis = 1)\n",
     "f_train_set.close()\n",
     "f_val_set = open(\"val_set.csv\", 'a')\n",
+    "print('val_set')\n",
     "val_set.apply(lambda x : construct_line(x, val_set.columns, val_set.dtypes, string_dict, f_val_set), axis = 1)\n",
     "f_val_set.close()"
    ]
