--- a/MetricsOnValidationSet_like.ipynb
+++ b/MetricsOnValidationSet_like.ipynb
@@ -200,6 +200,136 @@
    "source": [
     "rce"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_features = [\"tweet_timestamp\", \"like_timestamp\"]\n",
+    "train = pd.read_csv(open(\"s3://recsys-challenge-2020/training.tsv\"), encoding=\"utf-8\",\n",
+    "                    names = all_features, usecols= [8, 23], sep=\"\\x01\"\n",
+    "                   )\n",
+    "train_sorted = train.sort_values(by=['tweet_timestamp']).reset_index()\n",
+    "n_head = 90\n",
+    "n_tail = 10\n",
+    "train_set = train_sorted.head(int(len(train_sorted)*(n_head/100)))\n",
+    "val_set = train_sorted.tail(int(len(train_sorted)*(n_tail/100))).reset_index()\n",
+    "val_set['like_bool'] = val_set.like_timestamp.fillna(0)\n",
+    "val_set.loc[val_set.like_bool != 0.0, 'like_bool'] = 1.0\n",
+    "gt = list(val_set.like_bool)\n",
+    "pr_df = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/like/val_set_result_mcmc.csv',\\\n",
+    "                      names = ['probability_like'])\n",
+    "pr = list(pr_df.probability_like)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4109061128785592"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-995.1687489146188"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# all_features = [\"tweet_timestamp\", \"like_timestamp\"]\n",
+    "# train = pd.read_csv(open(\"s3://recsys-challenge-2020/training.tsv\"), encoding=\"utf-8\",\n",
+    "#                     names = all_features, usecols= [8, 23], sep=\"\\x01\"\n",
+    "#                    )\n",
+    "# train_sorted = train.sort_values(by=['tweet_timestamp']).reset_index()\n",
+    "# n_head = 90\n",
+    "# n_tail = 10\n",
+    "# train_set = train_sorted.head(int(len(train_sorted)*(n_head/100)))\n",
+    "# val_set = train_sorted.tail(int(len(train_sorted)*(n_tail/100))).reset_index()\n",
+    "# val_set['like_bool'] = val_set.like_timestamp.fillna(0)\n",
+    "# val_set.loc[val_set.like_bool != 0.0, 'like_bool'] = 1.0\n",
+    "# gt = list(val_set.like_bool)\n",
+    "pr_df = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/like/val_set_result_als.csv',\\\n",
+    "                      names = ['probability_like'])\n",
+    "pr = list(pr_df.probability_like)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5627288859283393"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2416.392895347355"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
+   ]
   }
  ],
  "metadata": {
